<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    
    <ImageView
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:background="@drawable/female"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="99dp"
        app:layout_constraintTop_toTopOf="parent"


        />

    <TextView
        android:id="@+id/hi"
        android:layout_width="133sp"
        android:layout_height="72sp"
android:text="Hello, \nWelcome"
        android:fontFamily="@font/sfpro_medium"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/female"
        app:layout_constraintStart_toStartOf="parent"
        
        />
    
    <EditText
        android:id="@+id/ph_or_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hi"
        android:layout_marginTop="60dp"
        android:hint="@string/et_emal"
        android:textSize="16sp"
        android:fontFamily="@font/sfpro_regular"
        android:paddingBottom="15dp"
        />
    
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ph_or_mail"
        android:fontFamily="@font/sfpro_regular"
        android:textSize="16sp"
        android:paddingBottom="15dp"
        android:inputType="textPassword"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/bn_sign_in"
        android:gravity="center"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/sfpro_regular"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:backgroundTint="@color/light_blue"
        />

    <TextView
        android:id="@+id/or_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        android:text="@string/tt_or_sign"
        android:textSize="18sp"
        android:fontFamily="@font/sfpro_medium"
        android:layout_marginTop="40dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/socials"
        app:layout_constraintTop_toBottomOf="@id/or_sign_in"
        android:layout_marginTop="20dp"


        />
    



    
    
</androidx.constraintlayout.widget.ConstraintLayout>

